--- a/Pymaceuticals/pymaceuticals.ipynb
+++ b/Pymaceuticals/pymaceuticals.ipynb
@@ -64,29 +64,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       False\n",
-       "1       False\n",
-       "2       False\n",
-       "3       False\n",
-       "4       False\n",
-       "        ...  \n",
-       "1888    False\n",
-       "1889    False\n",
-       "1890    False\n",
-       "1891    False\n",
-       "1892    False\n",
-       "Length: 1893, dtype: bool"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Identify the duplicate mice by ID number that shows up for Mouse ID and Timepoint\n",
     "duplicate_mice = complete_study.duplicated(subset=['Mouse ID','Timepoint'], keep=False)"
@@ -96,184 +74,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Mouse ID</th>\n",
-       "      <th>Drug Regimen</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age_months</th>\n",
-       "      <th>Weight (g)</th>\n",
-       "      <th>Timepoint</th>\n",
-       "      <th>Tumor Volume (mm3)</th>\n",
-       "      <th>Metastatic Sites</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>908</th>\n",
-       "      <td>g989</td>\n",
-       "      <td>Propriva</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>21</td>\n",
-       "      <td>26</td>\n",
-       "      <td>0</td>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>909</th>\n",
-       "      <td>g989</td>\n",
-       "      <td>Propriva</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>21</td>\n",
-       "      <td>26</td>\n",
-       "      <td>0</td>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>910</th>\n",
-       "      <td>g989</td>\n",
-       "      <td>Propriva</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>21</td>\n",
-       "      <td>26</td>\n",
-       "      <td>5</td>\n",
-       "      <td>48.786801</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>911</th>\n",
-       "      <td>g989</td>\n",
-       "      <td>Propriva</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>21</td>\n",
-       "      <td>26</td>\n",
-       "      <td>5</td>\n",
-       "      <td>47.570392</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>912</th>\n",
-       "      <td>g989</td>\n",
-       "      <td>Propriva</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>21</td>\n",
-       "      <td>26</td>\n",
-       "      <td>10</td>\n",
-       "      <td>51.745156</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>913</th>\n",
-       "      <td>g989</td>\n",
-       "      <td>Propriva</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>21</td>\n",
-       "      <td>26</td>\n",
-       "      <td>10</td>\n",
-       "      <td>49.880528</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>914</th>\n",
-       "      <td>g989</td>\n",
-       "      <td>Propriva</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>21</td>\n",
-       "      <td>26</td>\n",
-       "      <td>15</td>\n",
-       "      <td>51.325852</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>915</th>\n",
-       "      <td>g989</td>\n",
-       "      <td>Propriva</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>21</td>\n",
-       "      <td>26</td>\n",
-       "      <td>15</td>\n",
-       "      <td>53.442020</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>916</th>\n",
-       "      <td>g989</td>\n",
-       "      <td>Propriva</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>21</td>\n",
-       "      <td>26</td>\n",
-       "      <td>20</td>\n",
-       "      <td>55.326122</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>917</th>\n",
-       "      <td>g989</td>\n",
-       "      <td>Propriva</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>21</td>\n",
-       "      <td>26</td>\n",
-       "      <td>20</td>\n",
-       "      <td>54.657650</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Mouse ID Drug Regimen     Sex  Age_months  Weight (g)  Timepoint  \\\n",
-       "908     g989     Propriva  Female          21          26          0   \n",
-       "909     g989     Propriva  Female          21          26          0   \n",
-       "910     g989     Propriva  Female          21          26          5   \n",
-       "911     g989     Propriva  Female          21          26          5   \n",
-       "912     g989     Propriva  Female          21          26         10   \n",
-       "913     g989     Propriva  Female          21          26         10   \n",
-       "914     g989     Propriva  Female          21          26         15   \n",
-       "915     g989     Propriva  Female          21          26         15   \n",
-       "916     g989     Propriva  Female          21          26         20   \n",
-       "917     g989     Propriva  Female          21          26         20   \n",
-       "\n",
-       "     Tumor Volume (mm3)  Metastatic Sites  \n",
-       "908           45.000000                 0  \n",
-       "909           45.000000                 0  \n",
-       "910           48.786801                 0  \n",
-       "911           47.570392                 0  \n",
-       "912           51.745156                 0  \n",
-       "913           49.880528                 0  \n",
-       "914           51.325852                 1  \n",
-       "915           53.442020                 0  \n",
-       "916           55.326122                 1  \n",
-       "917           54.657650                 1  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get all the data for any duplicate mouse ID. \n",
     "duplicate_mice_data = complete_study.loc[duplicate_mice,:]"
@@ -485,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -493,12 +294,12 @@
       "text/plain": [
        "count     1888\n",
        "unique     249\n",
-       "top       y865\n",
+       "top       p136\n",
        "freq        10\n",
        "Name: Mouse ID, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -541,20 +342,14 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>count</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>std</th>\n",
-       "      <th>min</th>\n",
-       "      <th>25%</th>\n",
-       "      <th>50%</th>\n",
-       "      <th>75%</th>\n",
-       "      <th>max</th>\n",
+       "      <th>Mean Tumor Volume</th>\n",
+       "      <th>Median Tumor Volume</th>\n",
+       "      <th>Tumor Volume Variance</th>\n",
+       "      <th>Tumor Volume Standard Deviation</th>\n",
+       "      <th>Tumor Volume Standard Errors</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Drug Regimen</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -565,92 +360,152 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Capomulin</th>\n",
-       "      <td>230.0</td>\n",
        "      <td>40.675741</td>\n",
-       "      <td>4.994774</td>\n",
-       "      <td>23.343598</td>\n",
-       "      <td>37.685933</td>\n",
        "      <td>41.557809</td>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>48.158209</td>\n",
+       "      <td>24.947764</td>\n",
+       "      <td>4.994774</td>\n",
+       "      <td>0.329346</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Ceftamin</th>\n",
-       "      <td>178.0</td>\n",
        "      <td>52.591172</td>\n",
-       "      <td>6.268188</td>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>47.208427</td>\n",
        "      <td>51.776157</td>\n",
-       "      <td>56.801438</td>\n",
-       "      <td>68.923185</td>\n",
+       "      <td>39.290177</td>\n",
+       "      <td>6.268188</td>\n",
+       "      <td>0.469821</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Infubinol</th>\n",
-       "      <td>178.0</td>\n",
        "      <td>52.884795</td>\n",
-       "      <td>6.567243</td>\n",
-       "      <td>36.321346</td>\n",
-       "      <td>47.312353</td>\n",
        "      <td>51.820584</td>\n",
-       "      <td>57.314444</td>\n",
-       "      <td>72.226731</td>\n",
+       "      <td>43.128684</td>\n",
+       "      <td>6.567243</td>\n",
+       "      <td>0.492236</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Ketapril</th>\n",
-       "      <td>188.0</td>\n",
        "      <td>55.235638</td>\n",
-       "      <td>8.279709</td>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>48.232987</td>\n",
        "      <td>53.698743</td>\n",
-       "      <td>60.870951</td>\n",
-       "      <td>78.567014</td>\n",
+       "      <td>68.553577</td>\n",
+       "      <td>8.279709</td>\n",
+       "      <td>0.603860</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Naftisol</th>\n",
-       "      <td>186.0</td>\n",
        "      <td>54.331565</td>\n",
-       "      <td>8.134708</td>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>47.285874</td>\n",
        "      <td>52.509285</td>\n",
-       "      <td>59.963034</td>\n",
-       "      <td>76.668817</td>\n",
+       "      <td>66.173479</td>\n",
+       "      <td>8.134708</td>\n",
+       "      <td>0.596466</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Placebo</th>\n",
+       "      <td>54.033581</td>\n",
+       "      <td>52.288934</td>\n",
+       "      <td>61.168083</td>\n",
+       "      <td>7.821003</td>\n",
+       "      <td>0.581331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Propriva</th>\n",
+       "      <td>52.382993</td>\n",
+       "      <td>50.783528</td>\n",
+       "      <td>43.220205</td>\n",
+       "      <td>6.574208</td>\n",
+       "      <td>0.526358</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ramicane</th>\n",
+       "      <td>40.216745</td>\n",
+       "      <td>40.673236</td>\n",
+       "      <td>23.486704</td>\n",
+       "      <td>4.846308</td>\n",
+       "      <td>0.320955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Stelasyn</th>\n",
+       "      <td>54.233149</td>\n",
+       "      <td>52.431737</td>\n",
+       "      <td>59.450562</td>\n",
+       "      <td>7.710419</td>\n",
+       "      <td>0.573111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zoniferol</th>\n",
+       "      <td>53.236507</td>\n",
+       "      <td>51.818479</td>\n",
+       "      <td>48.533355</td>\n",
+       "      <td>6.966589</td>\n",
+       "      <td>0.516398</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              count       mean       std        min        25%        50%  \\\n",
-       "Drug Regimen                                                                \n",
-       "Capomulin     230.0  40.675741  4.994774  23.343598  37.685933  41.557809   \n",
-       "Ceftamin      178.0  52.591172  6.268188  45.000000  47.208427  51.776157   \n",
-       "Infubinol     178.0  52.884795  6.567243  36.321346  47.312353  51.820584   \n",
-       "Ketapril      188.0  55.235638  8.279709  45.000000  48.232987  53.698743   \n",
-       "Naftisol      186.0  54.331565  8.134708  45.000000  47.285874  52.509285   \n",
+       "              Mean Tumor Volume  Median Tumor Volume  Tumor Volume Variance  \\\n",
+       "Drug Regimen                                                                  \n",
+       "Capomulin             40.675741            41.557809              24.947764   \n",
+       "Ceftamin              52.591172            51.776157              39.290177   \n",
+       "Infubinol             52.884795            51.820584              43.128684   \n",
+       "Ketapril              55.235638            53.698743              68.553577   \n",
+       "Naftisol              54.331565            52.509285              66.173479   \n",
+       "Placebo               54.033581            52.288934              61.168083   \n",
+       "Propriva              52.382993            50.783528              43.220205   \n",
+       "Ramicane              40.216745            40.673236              23.486704   \n",
+       "Stelasyn              54.233149            52.431737              59.450562   \n",
+       "Zoniferol             53.236507            51.818479              48.533355   \n",
        "\n",
-       "                    75%        max  \n",
-       "Drug Regimen                        \n",
-       "Capomulin     45.000000  48.158209  \n",
-       "Ceftamin      56.801438  68.923185  \n",
-       "Infubinol     57.314444  72.226731  \n",
-       "Ketapril      60.870951  78.567014  \n",
-       "Naftisol      59.963034  76.668817  "
+       "              Tumor Volume Standard Deviation  Tumor Volume Standard Errors  \n",
+       "Drug Regimen                                                                 \n",
+       "Capomulin                            4.994774                      0.329346  \n",
+       "Ceftamin                             6.268188                      0.469821  \n",
+       "Infubinol                            6.567243                      0.492236  \n",
+       "Ketapril                             8.279709                      0.603860  \n",
+       "Naftisol                             8.134708                      0.596466  \n",
+       "Placebo                              7.821003                      0.581331  \n",
+       "Propriva                             6.574208                      0.526358  \n",
+       "Ramicane                             4.846308                      0.320955  \n",
+       "Stelasyn                             7.710419                      0.573111  \n",
+       "Zoniferol                            6.966589                      0.516398  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
-    "mouse_id_group = no_duplicates.groupby(['Drug Regimen'])\n",
-    "summary_stats = mouse_id_group['Tumor Volume (mm3)'].describe()\n",
-    "summary_stats.head()\n",
-    "# This method is the most straightforward, creating multiple series and putting them all together at the end."
+    "# Generate a summary statistics table of mean, median, variance, standard deviation,\n",
+    "# and SEM of the tumor volume for each regimen\n",
+    "# This method is the most straightforward, creating multiple series and \n",
+    "# putting them all together at the end.\n",
+    "\n",
+    "# 1) group complete_study by Drug Regimen\n",
+    "drug_regimen = no_duplicates.groupby(['Drug Regimen'])\n",
+    "\n",
+    "# 2) calculate statistical parameters as separate series\n",
+    "drug_name = complete_study['Drug Regimen'].unique()\n",
+    "\n",
+    "mean_volume = drug_regimen['Tumor Volume (mm3)'].mean()\n",
+    "mean_volume = mean_volume.rename('Mean Tumor Volume')\n",
+    "\n",
+    "median_volume = drug_regimen['Tumor Volume (mm3)'].median()\n",
+    "median_volume = median_volume.rename('Median Tumor Volume')\n",
+    "                 \n",
+    "var_volume = drug_regimen['Tumor Volume (mm3)'].var()\n",
+    "var_volume = var_volume.rename('Tumor Volume Variance')\n",
+    "                 \n",
+    "std_volume = drug_regimen['Tumor Volume (mm3)'].std()\n",
+    "std_volume = std_volume.rename('Tumor Volume Standard Deviation')\n",
+    "                 \n",
+    "sem_volume = drug_regimen['Tumor Volume (mm3)'].sem()\n",
+    "sem_volume = sem_volume.rename('Tumor Volume Standard Errors')\n",
+    "                 \n",
+    "# combine all statistical parameters into one data frame\n",
+    "summary_stats = pd.concat([mean_volume,median_volume,\n",
+    "                             var_volume,std_volume,sem_volume],axis=1)\n",
+    "summary_stats"
    ]
   },
   {
@@ -661,7 +516,8 @@
    },
    "outputs": [],
    "source": [
-    "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
+    "# Generate a summary statistics table of mean, median, variance, standard deviation,\n",
+    "# and SEM of the tumor volume for each regimen\n",
     "\n",
     "# This method produces everything in a single groupby function."
    ]
