--- a/Pymaceuticals/pymaceuticals.ipynb
+++ b/Pymaceuticals/pymaceuticals.ipynb
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
        "Zoniferol                            6.966589                      0.516398  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,12 +480,6 @@
     "# and SEM of the tumor volume for each regimen\n",
     "# This method is the most straightforward, creating multiple series and \n",
     "# putting them all together at the end.\n",
-    "\n",
-    "# 1) group complete_study by Drug Regimen\n",
-    "drug_regimen = no_duplicates.groupby(['Drug Regimen'])\n",
-    "\n",
-    "# 2) calculate statistical parameters as separate series\n",
-    "drug_name = complete_study['Drug Regimen'].unique()\n",
     "\n",
     "mean_volume = drug_regimen['Tumor Volume (mm3)'].mean()\n",
     "mean_volume = mean_volume.rename('Mean Tumor Volume')\n",
@@ -503,23 +497,176 @@
     "sem_volume = sem_volume.rename('Tumor Volume Standard Errors')\n",
     "                 \n",
     "# combine all statistical parameters into one data frame\n",
-    "summary_stats = pd.concat([mean_volume,median_volume,\n",
+    "summary_stats_concat = pd.concat([mean_volume,median_volume,\n",
     "                             var_volume,std_volume,sem_volume],axis=1)\n",
-    "summary_stats"
+    "summary_stats_concat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"5\" halign=\"left\">Tumor Volume (mm3)</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>median</th>\n",
+       "      <th>var</th>\n",
+       "      <th>std</th>\n",
+       "      <th>sem</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Drug Regimen</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Capomulin</th>\n",
+       "      <td>40.675741</td>\n",
+       "      <td>41.557809</td>\n",
+       "      <td>24.947764</td>\n",
+       "      <td>4.994774</td>\n",
+       "      <td>0.329346</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ceftamin</th>\n",
+       "      <td>52.591172</td>\n",
+       "      <td>51.776157</td>\n",
+       "      <td>39.290177</td>\n",
+       "      <td>6.268188</td>\n",
+       "      <td>0.469821</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Infubinol</th>\n",
+       "      <td>52.884795</td>\n",
+       "      <td>51.820584</td>\n",
+       "      <td>43.128684</td>\n",
+       "      <td>6.567243</td>\n",
+       "      <td>0.492236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ketapril</th>\n",
+       "      <td>55.235638</td>\n",
+       "      <td>53.698743</td>\n",
+       "      <td>68.553577</td>\n",
+       "      <td>8.279709</td>\n",
+       "      <td>0.603860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Naftisol</th>\n",
+       "      <td>54.331565</td>\n",
+       "      <td>52.509285</td>\n",
+       "      <td>66.173479</td>\n",
+       "      <td>8.134708</td>\n",
+       "      <td>0.596466</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Placebo</th>\n",
+       "      <td>54.033581</td>\n",
+       "      <td>52.288934</td>\n",
+       "      <td>61.168083</td>\n",
+       "      <td>7.821003</td>\n",
+       "      <td>0.581331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Propriva</th>\n",
+       "      <td>52.322552</td>\n",
+       "      <td>50.854632</td>\n",
+       "      <td>42.351070</td>\n",
+       "      <td>6.507770</td>\n",
+       "      <td>0.512884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ramicane</th>\n",
+       "      <td>40.216745</td>\n",
+       "      <td>40.673236</td>\n",
+       "      <td>23.486704</td>\n",
+       "      <td>4.846308</td>\n",
+       "      <td>0.320955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Stelasyn</th>\n",
+       "      <td>54.233149</td>\n",
+       "      <td>52.431737</td>\n",
+       "      <td>59.450562</td>\n",
+       "      <td>7.710419</td>\n",
+       "      <td>0.573111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zoniferol</th>\n",
+       "      <td>53.236507</td>\n",
+       "      <td>51.818479</td>\n",
+       "      <td>48.533355</td>\n",
+       "      <td>6.966589</td>\n",
+       "      <td>0.516398</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Tumor Volume (mm3)                                          \n",
+       "                           mean     median        var       std       sem\n",
+       "Drug Regimen                                                             \n",
+       "Capomulin             40.675741  41.557809  24.947764  4.994774  0.329346\n",
+       "Ceftamin              52.591172  51.776157  39.290177  6.268188  0.469821\n",
+       "Infubinol             52.884795  51.820584  43.128684  6.567243  0.492236\n",
+       "Ketapril              55.235638  53.698743  68.553577  8.279709  0.603860\n",
+       "Naftisol              54.331565  52.509285  66.173479  8.134708  0.596466\n",
+       "Placebo               54.033581  52.288934  61.168083  7.821003  0.581331\n",
+       "Propriva              52.322552  50.854632  42.351070  6.507770  0.512884\n",
+       "Ramicane              40.216745  40.673236  23.486704  4.846308  0.320955\n",
+       "Stelasyn              54.233149  52.431737  59.450562  7.710419  0.573111\n",
+       "Zoniferol             53.236507  51.818479  48.533355  6.966589  0.516398"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Generate a summary statistics table of mean, median, variance, standard deviation,\n",
     "# and SEM of the tumor volume for each regimen\n",
     "\n",
-    "# This method produces everything in a single groupby function."
+    "# This method produces everything in a single groupby function.\n",
+    "summary_stats = complete_study[['Drug Regimen','Tumor Volume (mm3)']].groupby(['Drug Regimen']).agg({\n",
+    "    'Tumor Volume (mm3)': ['mean', 'median', 'var','std','sem']})\n",
+    "summary_stats"
    ]
   },
   {
