--- a/Pymaceuticals/pymaceuticals.ipynb
+++ b/Pymaceuticals/pymaceuticals.ipynb
@@ -511,7 +511,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x299b0f4e6d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2913811e6d0>"
       ]
      },
      "execution_count": 9,
@@ -720,11 +720,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There is(are) 1 outlier(s) in the tumor volume dataset\n"
+     ]
+    }
+   ],
    "source": [
-    "# Calculate the final tumor volume of each mouse across four of the most promising treatment regimens. Calculate the IQR and quantitatively determine if there are any potential outliers. \n"
+    "# Calculate the final tumor volume of each mouse across four of the most promising drug\n",
+    "# regimens. Calculate the IQR and quantitatively determine if there are any potential outliers. \n",
+    "final_tumor_volume = clean_study.loc[\n",
+    "                        clean_study['Timepoint']==45,['Drug Regimen','Tumor Volume (mm3)'] \n",
+    "]\n",
+    "final_tumor_volume = final_tumor_volume.loc[(final_tumor_volume['Drug Regimen']=='Capomulin')|\n",
+    "                                            (final_tumor_volume['Drug Regimen']=='Ramicane')|\n",
+    "                                            (final_tumor_volume['Drug Regimen']=='Infubinol')|\n",
+    "                                            (final_tumor_volume['Drug Regimen']=='Ceftamin'),:]\n",
+    "\n",
+    "# calculate the quartiles for the final tumor volume\n",
+    "quartiles = final_tumor_volume['Tumor Volume (mm3)'].quantile([0.25,0.5,0.75])\n",
+    "lowerq = quartiles[0.25]\n",
+    "upperq = quartiles[0.75]\n",
+    "\n",
+    "# calculate the IQR\n",
+    "iqr = upperq - lowerq\n",
+    "\n",
+    "# calculate upper and lower bounds of confidence interval\n",
+    "lower_bound = lowerq - iqr*1.5\n",
+    "upper_bound = upperq + iqr*1.5\n",
+    "\n",
+    "# calculate outliers\n",
+    "outliers = [(final_tumor_volume['Tumor Volume (mm3)']>upper_bound)|\n",
+    "            (final_tumor_volume['Tumor Volume (mm3)']<lower_bound)]\n",
+    "print(f'There is(are) {len(outliers)} outlier(s) in the tumor volume dataset')"
    ]
   },
   {
