modified quartile calculations

--- a/Pymaceuticals/pymaceuticals.ipynb
+++ b/Pymaceuticals/pymaceuticals.ipynb
@@ -720,20 +720,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There is(are) 1 outlier(s) in the tumor volume dataset\n"
+      "There are 0 outliers in the Capomulin dataset\n",
+      "There are 0 outliers in the Ramicane dataset\n",
+      "There are 0 outliers in the Infubinol dataset\n",
+      "There are 0 outliers in the Ceftamin dataset\n"
      ]
     }
    ],
    "source": [
     "# Calculate the final tumor volume of each mouse across four of the most promising drug\n",
     "# regimens. Calculate the IQR and quantitatively determine if there are any potential outliers. \n",
+    "\n",
+    "# reduce the dataframe to show only tumor volume and drug regimen at timepoint 45\n",
     "final_tumor_volume = clean_study.loc[\n",
     "                        clean_study['Timepoint']==45,['Drug Regimen','Tumor Volume (mm3)'] \n",
     "]\n",
@@ -741,23 +746,78 @@
     "                                            (final_tumor_volume['Drug Regimen']=='Ramicane')|\n",
     "                                            (final_tumor_volume['Drug Regimen']=='Infubinol')|\n",
     "                                            (final_tumor_volume['Drug Regimen']=='Ceftamin'),:]\n",
+    "final_tumor_volume = final_tumor_volume.set_index('Drug Regimen')\n",
     "\n",
+    "# create separate lists for each drug regimen\n",
+    "capomulin = final_tumor_volume.loc['Capomulin','Tumor Volume (mm3)']\n",
+    "ramicane = final_tumor_volume.loc['Ramicane','Tumor Volume (mm3)']\n",
+    "infubinol = final_tumor_volume.loc['Infubinol','Tumor Volume (mm3)']\n",
+    "ceftamin = final_tumor_volume.loc['Ceftamin','Tumor Volume (mm3)']\n",
+    "       \n",
     "# calculate the quartiles for the final tumor volume\n",
-    "quartiles = final_tumor_volume['Tumor Volume (mm3)'].quantile([0.25,0.5,0.75])\n",
-    "lowerq = quartiles[0.25]\n",
-    "upperq = quartiles[0.75]\n",
+    "quartiles_capomulin = capomulin.quantile([0.25,0.5,0.75])\n",
+    "lowerq_capomulin = quartiles_capomulin[0.25]\n",
+    "upperq_capomulin = quartiles_capomulin[0.75]\n",
+    "\n",
+    "quartiles_ramicane = ramicane.quantile([0.25,0.5,0.75])\n",
+    "lowerq_ramicane = quartiles_ramicane[0.25]\n",
+    "upperq_ramicane = quartiles_ramicane[0.75]\n",
+    "\n",
+    "quartiles_infubinol = infubinol.quantile([0.25,0.5,0.75])\n",
+    "lowerq_infubinol = quartiles_infubinol[0.25]\n",
+    "upperq_infubinol = quartiles_infubinol[0.75]\n",
+    "\n",
+    "quartiles_ceftamin = ceftamin.quantile([0.25,0.5,0.75])\n",
+    "lowerq_ceftamin = quartiles_ceftamin[0.25]\n",
+    "upperq_ceftamin = quartiles_ceftamin[0.75]\n",
     "\n",
     "# calculate the IQR\n",
-    "iqr = upperq - lowerq\n",
+    "iqr_capomulin = upperq_capomulin - lowerq_capomulin\n",
+    "\n",
+    "iqr_ramicane = upperq_ramicane - lowerq_ramicane\n",
+    "\n",
+    "iqr_infubinol = upperq_infubinol - lowerq_infubinol\n",
+    "\n",
+    "iqr_ceftamin = upperq_ceftamin - lowerq_ceftamin\n",
     "\n",
     "# calculate upper and lower bounds of confidence interval\n",
-    "lower_bound = lowerq - iqr*1.5\n",
-    "upper_bound = upperq + iqr*1.5\n",
+    "lower_bound_capomulin = lowerq_capomulin - iqr*1.5\n",
+    "upper_bound_capomulin = upperq_capomulin + iqr*1.5\n",
+    "\n",
+    "lower_bound_ramicane = lowerq_ramicane - iqr*1.5\n",
+    "upper_bound_ramicane = upperq_ramicane + iqr*1.5\n",
+    "\n",
+    "lower_bound_infubinol = lowerq_infubinol - iqr*1.5\n",
+    "upper_bound_infubinol = upperq_infubinol + iqr*1.5\n",
+    "\n",
+    "lower_bound_ceftamin = lowerq_ceftamin - iqr*1.5\n",
+    "upper_bound_ceftamin = upperq_ceftamin + iqr*1.5\n",
     "\n",
     "# calculate outliers\n",
-    "outliers = [(final_tumor_volume['Tumor Volume (mm3)']>upper_bound)|\n",
-    "            (final_tumor_volume['Tumor Volume (mm3)']<lower_bound)]\n",
-    "print(f'There is(are) {len(outliers)} outlier(s) in the tumor volume dataset')"
+    "outliers_capomulin = 0\n",
+    "for value in capomulin:\n",
+    "    if ((value>upper_bound_capomulin)|(value<lower_bound_capomulin)):\n",
+    "        outliers_capomulin += 1\n",
+    "\n",
+    "outliers_ramicane = 0\n",
+    "for value in ramicane:\n",
+    "    if ((value>upper_bound_ramicane)|(value<lower_bound_ramicane)):\n",
+    "        outliers_ramicane += 1        \n",
+    "        \n",
+    "outliers_infubinol = 0\n",
+    "for value in infubinol:\n",
+    "    if ((value>upper_bound_infubinol)|(value<lower_bound_infubinol)):\n",
+    "        outliers_infubinol += 1\n",
+    "        \n",
+    "outliers_ceftamin = 0\n",
+    "for value in ceftamin:\n",
+    "    if ((value>upper_bound_ceftamin)|(value<lower_bound_ceftamin)):\n",
+    "        outliers_ceftamin += 1\n",
+    "        \n",
+    "print(f'There are {outliers_capomulin} outliers in the Capomulin dataset')\n",
+    "print(f'There are {outliers_ramicane} outliers in the Ramicane dataset')\n",
+    "print(f'There are {outliers_infubinol} outliers in the Infubinol dataset')\n",
+    "print(f'There are {outliers_ceftamin} outliers in the Ceftamin dataset')"
    ]
   },
   {
