--- a/Pymaceuticals/pymaceuticals.ipynb
+++ b/Pymaceuticals/pymaceuticals.ipynb
@@ -513,7 +513,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x22f1f98b100>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1d7e61ca100>"
       ]
      },
      "execution_count": 9,
@@ -585,9 +585,9 @@
     "x_axis = [x for x in range(len(mice_per_timepoint_unstack))]\n",
     "\n",
     "bar_width = 0.05\n",
-    "w = 0.05\n",
     "\n",
     "# define the x-axis for each drug regimen to avoid overlap once plotted\n",
+    "w = 0.05\n",
     "for i in range(0,len(drug_regimen)):\n",
     "    x_axis[i] = [x+w for x in range(len(x_axis))]\n",
     "    w += 0.05\n",
@@ -737,14 +737,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 0 outliers in the promising drugs dataset\n"
+      "There are 1 outliers in the promising drugs dataset\n"
      ]
     },
     {
@@ -885,7 +885,7 @@
        "Ramicane      45.22   9.10       17.91       54.31  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,84 +915,31 @@
     "ceftamin = promising_drugs.loc[promising_drugs['Drug Regimen']=='Ceftamin','Tumor Volume (mm3)']\n",
     "\n",
     "# group the new table by Drug Regimen and describe statistical parameters\n",
-    "promising_drugs_grouped = round(promising_drugs.groupby(['Drug Regimen']).describe(),2)\n",
+    "promising_drugs_stats = round(promising_drugs.groupby(['Drug Regimen']).describe(),2)\n",
     "\n",
     "# calculate inter-quartile range, upper and lower bounds of confidence intervals\n",
-    "promising_drugs_grouped['IQR']= promising_drugs_grouped.iloc[:,6]-promising_drugs_grouped.iloc[:,4]\n",
-    "promising_drugs_grouped['Lower Bound']=promising_drugs_grouped.iloc[:,4]-(promising_drugs_grouped['IQR']*1.5)\n",
-    "promising_drugs_grouped['Upper Bound']=promising_drugs_grouped.iloc[:,6]+(promising_drugs_grouped['IQR']*1.5)\n",
+    "promising_drugs_stats['IQR']= promising_drugs_stats.iloc[:,6]-promising_drugs_stats.iloc[:,4]\n",
+    "promising_drugs_stats['Lower Bound']=promising_drugs_stats.iloc[:,4]-(promising_drugs_stats['IQR']*1.5)\n",
+    "promising_drugs_stats['Upper Bound']=promising_drugs_stats.iloc[:,6]+(promising_drugs_stats['IQR']*1.5)\n",
     "\n",
     "# calculate outliers\n",
-    "pivot_df = promising_drugs.pivot(columns='Drug Regimen',values='Tumor Volume (mm3)')\n",
+    "# if outliers are below the lower bound, test_lower_bound will result in negative values\n",
+    "# if outliers are above the upper bound, test_upper_bound will result in negative values\n",
+    "test_lower_bound = promising_drugs.groupby('Drug Regimen').transform(lambda group:\n",
+    "    group-(group.quantile(0.25)-(group.quantile(0.75)-group.quantile(0.25))*1.5))\n",
+    "lower_outliers = (test_lower_bound['Tumor Volume (mm3)'] < 0).astype(int)\n",
+    "test_upper_bound = promising_drugs.groupby('Drug Regimen').transform(lambda group:\n",
+    "    (group.quantile(0.75)+(group.quantile(0.75)-group.quantile(0.25))*1.5)-group)\n",
+    "upper_outliers = (test_upper_bound < 0).astype(int)\n",
+    "upper_outliers = (test_upper_bound['Tumor Volume (mm3)'] < 0).astype(int)\n",
     "\n",
-    "try:\n",
-    "    outliers = 0\n",
-    "    for x in range(0,len(pivot_df)):\n",
-    "        if (pivot_df['Capomulin']<promising_drugs_grouped.iloc[0,4]|pivot_df['Capomulin']>promising_drugs_grouped.iloc[0,6]):\n",
-    "            outliers +=1\n",
-    "        elif (pivot_df['Ramicane']<promising_drugs_grouped.iloc[1,4]|pivot_df['Ramicane']>promising_drugs_grouped.iloc[1,6]):\n",
-    "            outliers +=1\n",
-    "        elif (pivot_df['Infubinol']<promising_drugs_grouped.iloc[2,4]|pivot_df['Infubinol']>promising_drugs_grouped.iloc[2,6]):\n",
-    "            outliers +=1\n",
-    "        elif (pivot_df['Ceftamin']<promising_drugs_grouped.iloc[3,4]|pivot_df['Ceftamin']>promising_drugs_grouped.iloc[3,6]):\n",
-    "            outliers +=1\n",
-    "except TypeError:\n",
-    "    pass\n",
-    "print(f'There are {outliers} outliers in the promising drugs dataset')\n",
-    "promising_drugs_grouped"
+    "print(f'There are {lower_outliers.sum()+upper_outliers.sum()} outliers in the promising drugs dataset')\n",
+    "promising_drugs_stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# grouped_by_mouse_id = clean_study[['Mouse ID','Timepoint']].groupby(['Mouse ID']).max()\n",
-    "# grouped_by_mouse_id\n",
-    "# outliers_test = 0\n",
-    "# for x in range(0,len(capomulin)):\n",
-    "#     if (capomulin[x]<promising_drugs_grouped.iloc[0,4]|capomulin[x]>promising_drugs_grouped.iloc[0,6]):\n",
-    "#         outliers_test +=1\n",
-    "# for y in range(0,len(ceftamin)):\n",
-    "#     if ((ceftamin[y]<promising_drugs_grouped.iloc[1,4])|(ceftamin[y]>promising_drugs_grouped.iloc[1,6])):\n",
-    "#         outliers_test +=1\n",
-    "# for z in range(0,len(infubinol)):\n",
-    "#     if ((infubinol[z]<promising_drugs_grouped.iloc[2,4])|(infubinol[z]>promising_drugs_grouped.iloc[2,6])):\n",
-    "#         outliers_test +=1\n",
-    "# for i in range(0,len(ramicane)):\n",
-    "#     if ((ramicane[i]<promising_drugs_grouped.iloc[3,4])|(ramicane[i]>promising_drugs_grouped.iloc[3,6])):\n",
-    "#         outliers_test +=1\n",
-    "# print(f'There are {outliers_test} outliers in the promising drugs dataset')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# clean_study.loc[grouped_by_mouse_id]\n",
-    "# cond = clean_study['Mouse ID'].isin(grouped_by_mouse_id['Mouse ID'])\n",
-    "# final_tumor = clean_study.drop(study_as_received[cond].index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# final_tumor = pd.DataFrame(columns=[clean_study.columns])\n",
-    "# for mouse in clean_study['Mouse ID']:\n",
-    "#     if mouse not in final_tumor['Mouse ID']:\n",
-    "#         final_tumor.add(mouse)\n",
-    "# final_tumor.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1012,6 +959,7 @@
     " # Generate a box plot of the final tumor volume of each mouse across four regimens of interest\n",
     "labels=['Capomulin','Ramicane','Infubinol','Ceftamin']\n",
     "fig1, ax1 = plt.subplots()\n",
+    "# for x in range(0,len(columns)):\n",
     "ax1.boxplot([capomulin,ramicane,infubinol,ceftamin],labels=labels)\n",
     "ax1.set_title('Tumor Volume (mm3) Per Drug Regimen')\n",
     "ax1.set_ylabel('Tumor Volume (mm3)')\n",
