final debugging and proof reading

--- a/Pymaceuticals/pymaceuticals.ipynb
+++ b/Pymaceuticals/pymaceuticals.ipynb
@@ -4,7 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Observations and Insights "
+    "## Observations and Insights\n",
+    "#### Capomulin is one of the two best performing drugs in the study, along with Ramicane.\n",
+    "#### Both of these treatments resulted in the greatest tumor size reduction and highest rate of survival for mice in the study.\n",
+    "#### Rate of survival is slightly better for Capomulin with 21 of 25 mice surviving, versus 20 of 25 for Ramicane.\n",
+    "#### Average final tumor size showed less than 1.4% difference between Ramicane (36.19 mm3) and Capomulin (36.67 mm3).\n",
+    "#### There is a strong positive correlation between final tumor volume and mouse weight among the mice treated with Capomulin."
    ]
   },
   {
@@ -74,7 +79,9 @@
    "outputs": [],
    "source": [
     "# Get all the data for any duplicate mouse ID. \n",
-    "duplicate_mice_data = study_as_received.loc[duplicate_mice_bool,:]"
+    "duplicated_data = study_as_received.loc[duplicate_mice_bool,:]\n",
+    "cond = study_as_received['Mouse ID'].isin(duplicated_data['Mouse ID'])\n",
+    "duplicated_mice_data = study_as_received.iloc[study_as_received[cond].index]"
    ]
   },
   {
@@ -84,7 +91,6 @@
    "outputs": [],
    "source": [
     "# Create a clean DataFrame by dropping the duplicate mouse by its ID. \n",
-    "cond = study_as_received['Mouse ID'].isin(duplicate_mice_data['Mouse ID'])\n",
     "clean_study = study_as_received.drop(study_as_received[cond].index)"
    ]
   },
@@ -512,7 +518,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x25ac97bd550>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2e855b0c610>"
       ]
      },
      "execution_count": 9,
@@ -595,7 +601,7 @@
     "plt.figure(figsize=(10,5))\n",
     "\n",
     "# plot bar charts for each drug regimen\n",
-    "for i in range (10):\n",
+    "for i in range (0,len(drug_regimen)):\n",
     "    plt.bar(x_axis[i],mice_per_timepoint_unstack.iloc[:,i],color=colors[i],\n",
     "            width=bar_width)\n",
     "    \n",
@@ -636,7 +642,7 @@
     }
    ],
    "source": [
-    "# Generate a pie plot showing the distribution of female versus male mice using pandas\n",
+    "# Generate a pie plot showing the distribution of female versus male mice, using pandas\n",
     "gender_group = clean_study['Sex'].value_counts()\n",
     "pandas_gender_pie = gender_group.plot(kind='pie',startangle=0,title='Mice Gender Distribution')"
    ]
@@ -658,7 +664,7 @@
     }
    ],
    "source": [
-    "# Generate a pie plot showing the distribution of female versus male mice using pyplot\n",
+    "# Generate a pie plot showing the distribution of female versus male mice, using pyplot\n",
     "labels = gender_group.keys()\n",
     "colors =['tab:blue','tab:orange']\n",
     "sizes = gender_group\n",
@@ -857,17 +863,17 @@
     "# group the new table by Drug Regimen and describe statistical parameters\n",
     "promising_drugs_stats = round(promising_drugs.groupby(['Drug Regimen']).describe(),2)\n",
     "\n",
-    "# calculate inter-quartile range, upper and lower bounds of confidence intervals\n",
+    "# calculate inter-quartile range, upper and lower bounds\n",
     "promising_drugs_stats['IQR']= promising_drugs_stats.iloc[:,6]-promising_drugs_stats.iloc[:,4]\n",
     "promising_drugs_stats['Lower Bound']=promising_drugs_stats.iloc[:,4]-(promising_drugs_stats['IQR']*1.5)\n",
     "promising_drugs_stats['Upper Bound']=promising_drugs_stats.iloc[:,6]+(promising_drugs_stats['IQR']*1.5)\n",
     "\n",
     "# calculate outliers\n",
     "# if outliers are below the lower bound, test_lower_bound will result in negative values\n",
-    "# if outliers are above the upper bound, test_upper_bound will result in negative values\n",
     "test_lower_bound = promising_drugs.groupby('Drug Regimen').transform(lambda group:\n",
     "    group-(group.quantile(0.25)-(group.quantile(0.75)-group.quantile(0.25))*1.5))\n",
     "lower_outliers = (test_lower_bound['Tumor Volume (mm3)'] < 0).astype(int)\n",
+    "# if outliers are above the upper bound, test_upper_bound will result in negative values\n",
     "test_upper_bound = promising_drugs.groupby('Drug Regimen').transform(lambda group:\n",
     "    (group.quantile(0.75)+(group.quantile(0.75)-group.quantile(0.25))*1.5)-group)\n",
     "upper_outliers = (test_upper_bound < 0).astype(int)\n",
@@ -896,7 +902,7 @@
     }
    ],
    "source": [
-    " # Generate a box plot of the final tumor volume of each mouse across four regimens of interest\n",
+    " # Generate a box plot of the final tumor volume of each mouse across four drug regimens of interest\n",
     "green_circle = dict(markerfacecolor='g', marker='o')\n",
     "labels=['Capomulin','Ramicane','Infubinol','Ceftamin']\n",
     "fig1, ax1 = plt.subplots(figsize=(10,5))\n",
@@ -1046,20 +1052,6 @@
     "plt.ylim(33,47)\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
